--- a/nike_product_card/index.html
+++ b/nike_product_card/index.html
@@ -34,7 +34,7 @@
               </p>
             </div>
             <img src="images/shoe1.png" alt="shoe-1" class="shoe-1" />
-            <img src="images/shoe2.png" alt="shoe-2" class="shoe-2" />
+            <img src="images/shoe2.png" alt="shoe-2" class="shoe-2" hidden />
           </div>
 
           <div class="card-bottom">
