--- a/nike_product_card/index.html
+++ b/nike_product_card/index.html
@@ -34,13 +34,13 @@
               </p>
             </div>
             <img src="images/shoe1.png" alt="shoe-1" class="shoe-1" />
-            <img src="images/shoe2.png" alt="shoe-2" class="shoe-2" hidden />
+            <img src="images/shoe2.png" alt="shoe-2" class="shoe-2" />
           </div>
 
           <div class="card-bottom">
             <h1>Air Structure</h1>
             <div class="badge">New</div>
-            <h3>Running Collections</h3>
+            <h3>Running Collection</h3>
 
             <div class="stars">
               <i class="fa-solid fa-star"></i>
